# parners_ai.back

./: .gitattributes  .gitignore  LICENSE  Makefile  docker-compose.yaml  pyproject.toml  test.py
libs/core/: constants.py
libs/core/config/: __init__.py  base.py
libs/core/config/environments/: __init__.py  development.py  production.py  staging.py
libs/core/config/mixins/: __init__.py  options.py
libs/domain/errors/: base.py
libs/domain/errors/stores/: __init__.py  not_found.py  query_execution.py  repository.py
libs/domain/protocols/http/: __init__.py  adapter.py  client.py
libs/domain/protocols/stores/: __init__.py  base.py  clickhouse.py  mysql.py  redis.py
libs/domain/utils/: __init__.py  exception_handler.py  orm_dump.py  paginate.py  service_files.py
libs/infrastructure/clients/: base.py
libs/infrastructure/clients/http/: base.py  client.py  resource.py
libs/infrastructure/factories/api/: __init__.py  client.py
services/api/: .env.example  Dockerfile  alembic.ini  config.example.json  main.py
services/api/docker/: Dockerfile  base.yaml  development.yaml
services/api/migrations/: env.py
services/bot/: .env.example  Dockerfile  config.example.json  main.py
services/bot/docker/: Dockerfile  base.yaml  development.yaml
services/bot/src/: config.py
services/bot/src/core/: constants.py
services/browser_agent/: .env.example  Dockerfile  config.example.json  main.py
services/browser_agent/docker/: Dockerfile  base.yaml  development.yaml
services/infra/: .env.example  Caddyfile
services/infra/docker/: base.yaml  development.yaml
(+312 files in other folders)
