[project]
name = "parners-ai-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "black>=26.5.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.50",
]

[project.optional-dependencies]
browser_agent = [
    "crawl4ai>=0.8.6",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "playwright>=1.60.0",
]
api = [
    "alembic>=1.18.4",
]

[project.scripts]
browser_agent = "services.browser_agent.main:main"
api = "services.api.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["libs", "services"]
